test/SemanticAnalysis/Names/DuplicateLocalVar.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

int function() {
	int value = 1;
	
	// CHECK: .loci:9:2: error: variable 'value' duplicates existing variable
	// CHECK: .loci:5:2: note: because: variable previously defined here
	int value = 2;
	return value;
}

// CHECK: 1 error generated.
